--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
     <title>Web todolist project</title>
   </head>
   <body>
-    <h1>Web todolist app</h1>
+    <main>
+      <h1>Web todolist app example <i>with TypeScript</i></h1>
+      <div id="input-container">
+        <label for="todo-input">Ajouter une todo</label>
+        <input type="text" name="todo-input" id="todo-input">
+        <label for="due-date-input">
+        </label><input type="date" name="due-date-input" id="due-date-input">
+        <button id="add-todo-button">Ajouter la todo</button>
+      </div>
+      <button>Remove all todos</button>
+      <ul id="todo-list-display">
+      </ul>
+    </main>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
