feat: delete all todos button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </label><input type="date" name="due-date-input" id="due-date-input">
         <button id="add-todo-button">Ajouter la todo</button>
       </div>
-      <button>Remove all todos</button>
+      <button id="remove-all-todo-button">Remove all todos</button>
       <ul id="todo-list-display">
       </ul>
     </main>
