refactor!: reorganise functions to manage errors

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <main>
       <h1>Web todolist app example <i>with TypeScript</i></h1>
+      <div id="error-container"></div>
       <div id="input-container">
         <label for="todo-input">Ajouter une todo</label>
         <input type="text" name="todo-input" id="todo-input">
