--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
         <input type="text" name="todo-input" id="todo-input">
         <label for="due-date-input">
         </label><input type="date" name="due-date-input" id="due-date-input">
-        <button id="add-todo-button">Ajouter la todo</button>
+        <button id="add-todo-button" disabled>Ajouter la todo</button>
       </div>
       <button>Remove all todos</button>
       <ul id="todo-list-display">
       </ul>
     </main>
+    <aside>
+      <h2>Categories</h2>
+    </aside>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
